added css media querys and classes to fix the placing of the inputs and make them appear to be the same size when they are centered and are above each other

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <p >This Application will help you add up and see the total cost of your bills</p>
 </div>
-
+    <div class="center-block makeDivSmall">
     <form name="BillInput">
         <div class="input-group">
             <span class="input-group-addon" id="basic-addon1">Bill</span>
-            <input name="bill" class="col-centered"  type="text"  ng-model="bill">
+            <input name="bill" class="input1"  type="text"  ng-model="bill">
         </div>
 
 
@@ -29,6 +29,7 @@
         </div>
 
     </form>
+    </div>
 
 
     <br/>
