--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
 
 <script src="js/app.js"></script>
 <script src="js/MainCtrl.js"></script>
+<script src="js/services.js"></script>
 </body>
 </html>
