--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <br/>
         <div class="input-group ">
             <span class="input-group-addon" id="basic-addon1">Amount</span>
-            <input name="Amount" type="text"  ng-model="amount">
+            <input name="Amount" type="number"  ng-model="amount">
         </div>
 
     </form>
