--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="BillsApp">
 <head>
+    <title>Bill Calculation Application</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Bills Processing App</title>
